# LagganDinoWindows

./: CMakeLists.txt  README.md  install.ps1  run.ps1
arquivos/save/: JogadorSemNome.dino  ObjetosSemNome.dino  Ranking.dino  Salvos.dino
libs/SFML/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
libs/SFML/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glsl.inl  Glyph.hpp  Image.hpp  Rect.hpp  Rect.inl  RenderTexture.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  View.hpp
libs/SFML/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  (+5 more)
src/: Andino.cpp  Andino.h  Animadora.cpp  Animadora.h  Atiradino.cpp  Atiradino.h  AtiradinoThread.cpp  AtiradinoThread.h  ChefeDino.cpp  ChefeDino.h  Corpo_Grafico.h  Entidade.cpp  Entidade.h  Espinho.cpp  Espinho.h  Estado.cpp  Estado.h  FabricaFase.cpp  FabricaFase.h  FabricaFloresta.cpp  FabricaFloresta.h  FabricaMontanha.cpp  FabricaMontanha.h  Fase.cpp  Fase.h  FaseEstado.cpp  Floresta.cpp  Floresta.h  Fundo.h  Galho.cpp  Galho.h  Gerenciador_Colisoes.cpp  Gerenciador_Colisoes.h  Gerenciador_Grafico.cpp  Gerenciador_Persistencias.cpp  Gerenciador_Persistencias.h  Inimigo.cpp  Inimigo.h  Jogador.cpp  Jogador.h  (+33 more)
(+50 files in other folders)
